--- a/.gitignore
+++ b/.gitignore
@@ -888,3 +888,5 @@ DerivedData/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 .DS_Store
+.flutter-plugins-dependencies
+.dart_tool/package_config.json
