--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,1 @@
-{
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]},"flutter":{"platforms":{"android":{"default":{"projectId":"church-hq","appId":"1:636142292577:android:0d192edd9110bc7ad52420","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"church-hq","configurations":{"android":"1:636142292577:android:0d192edd9110bc7ad52420","web":"1:636142292577:web:a1f1f22df453b7ebd52420"}}}}}}
