--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "rozvrh_generator",
-    "short_name": "rozvrh_generator",
+    "name": "Generator Rozvrhu",
+    "short_name": "Generator Rozvrhu",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": " #cfd9fc",
+    "theme_color": " #cfd9fc",
+    "description": "Táto appka ti dokáže vygenerovať rozvrh pre tvoju službu mesiace dopredu.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
